2018-04-15  Barton E. Schaefer  <schaefer@zsh.org>

	* 42636: Src/utils.c: fix GLOB_DOTS for !(RM_STAR_SILENT)

2018-04-13  Daniel Hahler  <zsh@thequod.de>

	* 42631: Completion/Unix/Command/_pgrep: _pgrep: pkill: fix completion
	of signals.

2018-04-12  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42624 (plus test): Src/exec.c, Test/C04funcdef.ztst: avoid
	freeing memory that's still needed in multiple function
	definition that has a duplicated function name

2018-04-11  Peter Stephenson  <p.stephenson@samsung.com>

	* 42623: configure.ac: some extra quotes needed (and some
	cosmetic) for 42618.

2018-04-10  Peter Stephenson  <p.stephenson@samsung.com>

	* Benedikt Morbach: 42618: configure.ac: support signal names
	from multiple include files as needed for glibc 2.25.

	* unposted: Config/version.mk: update dev version to 5.5-dev-0.

2018-04-09  Eric Cook  <llua@gmx.com>
	* 42613: pda: Completion/Linux/Command/_ss
	fix quoting typo

2018-04-08  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: release zsh-5.5.

2018-04-08  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* c.f. 42499: tera torn: Completion/Unix/Command/_twisted:
	update twisted completion stub for new twist command

2018-04-07  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* 42605: Src/Modules/mapfile.c, Src/Zle/complete.c,
	Src/Zle/zle_params.c: properly free the vi registers hash

	* 42601: Src/builtin.c: tidy up code for set -A/+A to not
	increment a NULL pointer and to be more efficient

	* 42607, CVE-2018-1100: Src/utils.c: check bounds on buffer
	in mail checking

	* 42600: Src/Zle/computil.c: error paths for _values leaked
	the exclusion list array

	* 42597: Src/params.c: plug memory leak found by coverity

	* 42595: Src/utils.c: remove dead code flagged by coverity

	* Matthew Martin: 42604: Completion/BSD/Command/_signify,
	Completion/BSD/Command/_vmctl: new completions for OpenBSD's
	signify and vmctl

	* github #24: Klas Mellbourn: Completion/X/Command/_code: